fix z-index for arrow-box

--- a/src/stylesheets/components/arrow-box/arrow-box.scss
+++ b/src/stylesheets/components/arrow-box/arrow-box.scss
@@ -6,6 +6,7 @@
   opacity: 1;
   transition: 0.2s opacity, 0.2s transform;
   margin-top: 0rem;
+  z-index: 1;
 
   &_hidden {
     visibility: hidden;
